Fix invisible arrows on latest ionic versions which Closes #8. Prepare v0.2.0

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@
 
 .idp-control-arrow {
   width: 100%;
+  color: #dddddd !important;
 }
 
 .idp-control-arrow > .icon::before {
